--- a/codes/readdata.ipynb
+++ b/codes/readdata.ipynb
@@ -154,13 +154,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MOTORES"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -281,6 +274,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MOTORES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -322,7 +322,7 @@
     "print(f\"La dimensión de la tabla es: {data.shape}\")\n",
     "\n",
     "# Seleccionar un rango de datos\n",
-    "data = data.iloc[0:1000]\n",
+    "#data = data.iloc[0:1000]\n",
     "\n",
     "# Mostrar la dimensión de la tabla\n",
     "print(f\"La dimensión nueva de la tabla es: {data.shape}\")\n",
